<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    tools:context="com.example.kuser.calculator.MainActivity">

    <TextView
        android:id="@+id/output_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="33sp"
        android:text="@string/Output_field_text"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxHeight="33sp"
        android:text="@string/Input_field_text"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button7_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button8_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button9_label"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button4_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button5_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button6_label"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button1_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button2_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button3_label"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button0_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/buttonEq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonEq_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/buttonCl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonCl_label"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonPlus_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonMinus_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/buttonSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonSpace_label"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonMultip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonMultip_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonDiv_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <!--
        <Button
            android:id="@+id/buttonMod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonMod_label"
            style="?android:attr/buttonBarButtonStyle"
            />
                        -->
        <Button
            android:id="@+id/buttonBckSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonBckSpace_label"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonExp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonExp_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <!--
        <Button
            android:id="@+id/buttonFac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonFac_label"
            style="?android:attr/buttonBarButtonStyle"
            />
            -->
    </LinearLayout>
    <!--
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonOBracket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonOBracket_label"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/buttonCBracket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonCBracket_label"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
    -->
</LinearLayout>
